# rgb-2024

./: .gitignore  Cargo.toml  cargo-toolchain.toml  derivation.nix  flake.nix
src/: main.rs  nt.rs  shaders.rs  spi.rs  strips.rs
